[tool.poetry]
name = "pyqt6rc"
version = "0.6.0"
description = "PyQt6 UI templates resource converter"
authors = ["Martin Domaracký <domarm@comat.sk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/domarm-comat/pyqt6rc"
repository = "https://github.com/domarm-comat/pyqt6rc"
keywords = ["pyqt6", "converter", "resources", "resource-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: PyQt6 developers",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
importlib-resources = "^5.12.0"
pyqt6 = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
mypy = "^1.3.0"

[tool.poetry.scripts]
pyqt6rc = "pyqt6rc.scripts.pyqt6rc:run"
pyqt6sp = "pyqt6rc.scripts.pyqt6sp:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
hello-world = "scripts:hello_world"